--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "c3": "^0.7.15",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-c3": "^1.2.11",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
